Seminar 2 ettevalmistus ja andmete uuendamine

--- a/andmetega_tutvumine.ipynb
+++ b/andmetega_tutvumine.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "44285f98",
    "metadata": {},
    "outputs": [
@@ -1099,6 +1099,30 @@
     "    print(f\"   - {v}: {rida[v]}\")\n",
     "if len(bool_veerud) > 5:\n",
     "    print(f\"   ... ja veel {len(bool_veerud) - 5} tk\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "ee643dac",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Tühjad (NaN):  91\n",
+      "Täidetud:      132\n",
+      "Kokku:         223\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Kontroll: tühjad vs täidetud tunnused\n",
+    "rida = df.iloc[0]\n",
+    "print(f\"Tühjad (NaN):  {rida.isna().sum()}\")\n",
+    "print(f\"Täidetud:      {rida.notna().sum()}\")\n",
+    "print(f\"Kokku:         {len(rida)}\")"
    ]
   },
   {
